Fixed footer styling on mobile

--- a/source/stylesheets/master.css.scss
+++ b/source/stylesheets/master.css.scss
@@ -39,7 +39,7 @@ footer {
 	.brand {
 		display: block;
 		color: $black;
-		margin-bottom: 24px;
+		margin-bottom: 20px;
 	}
 	ul {
 		margin-bottom: 24px;
@@ -569,7 +569,7 @@ blockquote {
 	}
 
 	footer {
-		font-size: 14px;
+		font-size: 13px;
 
 		img {
 				width: 20px;
